2011-10-19  Jason Merrill  <jason@redhat.com>

	PR c++/50793
	* tree.c (bot_manip): Propagate AGGR_INIT_ZERO_FIRST.

2011-10-13  Jason Merrill  <jason@redhat.com>

	PR c++/50618
	* init.c (expand_aggr_init_1): Don't zero-initialize virtual
	bases of a base subobject.

2011-10-11  Janis Johnson  <janisjo@codesourcery.com>

	PR c++/44473
	* mangle.c (write_type): Handle CV qualifiers for decimal classes.

2011-07-19  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	2011-07-07  Jakub Jelinek  <jakub@redhat.com>

	PR c/49644
	* typeck.c (cp_build_binary_op): For MULT_EXPR and TRUNC_DIV_EXPR with
	one non-complex and one complex argument, call save_expr on both
	operands.

2011-06-23  Jason Merrill  <jason@redhat.com>

	PR c++/49440
	* class.c (set_linkage_according_to_type): Hand off to
	determine_visibility.

2011-05-31  Duncan Sands  <baldrick@free.fr>

	Backported from 4.6 branch
	2011-03-09  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/47714
	* method.c (use_thunk): Clear addressable flag of thunk arguments.

2011-05-20  Jason Merrill  <jason@redhat.com>

	PR c++/48873
	* tree.c (stabilize_expr): Don't make gratuitous copies of classes.

2011-05-09  Jason Merrill  <jason@redhat.com>

	PR c++/48936
	* decl2.c (mark_used): Instantiate constant variables even
	in unevaluated context.

2011-04-27  Jason Merrill  <jason@redhat.com>

	PR c++/48046
	* parser.c (cp_parser_diagnose_invalid_type_name): Commit
	to tentative parse sooner.

2011-04-28  Release Manager

	* GCC 4.5.3 released.

2011-04-26  Dodji Seketeli  <dodji@redhat.com>

	PR c++/46824
	* call.c (add_builtin_candidate)<case INDIRECT_REF>: The type of
	the argument of the indirection operator should not be dependent.
	Fix the comment.

2011-04-26  Jason Merrill  <jason@redhat.com>

	PR c++/42687
	* parser.c (cp_parser_primary_expression): Set *idk to
	CP_ID_KIND_NONE for a parenthesized identifier.

2011-04-20  Jason Merrill  <jason@redhat.com>

	PR c++/48594